--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -65,20 +65,37 @@ jobs:
           Copy-Item -Path build_ci\src\TextBridge.exe -Destination release_package\ -Force
 
           # ===== 2. 最优打包命令（精简无错，适配你的版本） =====
+          # 尝试运行windeployqt，即使它失败或不完整，后续的手动复制会作为兜底
           windeployqt release_package\TextBridge.exe --release --no-translations --compiler-runtime
 
+          # ===== 【兜底修复】手动复制核心DLL，防止windeployqt漏文件 =====
+          Write-Host "Manually copying core DLLs from $qtBinDir..."
+          $coreDlls = @("Qt5Core.dll", "Qt5Gui.dll", "Qt5Widgets.dll", "libgcc_s_seh-1.dll", "libstdc++-6.dll", "libwinpthread-1.dll")
+          foreach ($dll in $coreDlls) {
+              $srcPath = Join-Path $qtBinDir $dll
+              if (Test-Path $srcPath) {
+                  Copy-Item -Path $srcPath -Destination release_package\ -Force
+              } else {
+                  Write-Warning "Core DLL not found: $srcPath"
+              }
+          }
+
           # ===== 【根因2修复 核心】手动复制Qt5.14.2缺失的platforms插件（必加，救命题） =====
-          # Qt的插件路径是固定的，由install-qt-action安装到这个目录，无需修改！
-          $QT_ROOT = "Qt/5.14.2/mingw73_64"
+          # 动态获取Qt根目录，避免硬编码路径错误
+          $windeployqtPath = (Get-Command windeployqt).Source
+          $qtBinDir = Split-Path $windeployqtPath
+          $qtRootDir = Split-Path $qtBinDir
+          Write-Host "Detected Qt Root: $qtRootDir"
+
           mkdir -Force release_package/platforms
-          Copy-Item -Path "$QT_ROOT/plugins/platforms/qwindows.dll" -Destination release_package/platforms/ -Force
-          Copy-Item -Path "$QT_ROOT/plugins/platforms/qminimal.dll" -Destination release_package/platforms/ -Force
+          Copy-Item -Path "$qtRootDir/plugins/platforms/qwindows.dll" -Destination release_package/platforms/ -Force
+          Copy-Item -Path "$qtRootDir/plugins/platforms/qminimal.dll" -Destination release_package/platforms/ -Force
 
           # ===== 3. 写入【最优稳定版】qt.conf 彻底隔离环境，防止运行时闪退 =====
           @"
           [Paths]
           Prefix = .
-          Plugins = platforms
+          Plugins = .
           Libraries = .
           Binaries = .
           "@ | Out-File -FilePath release_package\qt.conf -Encoding ASCII -Force
@@ -89,7 +106,7 @@ jobs:
           # ===== 验证：打印打包目录结构，确认所有核心文件都在 =====
           Write-Host "===== 打包目录文件清单 ====="
           Get-ChildItem -Recurse release_package
-        shell: C:\Program Files\PowerShell\7\pwsh.EXE -command ". '{0}'"      
+        shell: pwsh
       # 压缩打包：添加-Force覆盖已有zip
       - name: Create Zip Archive
         run: |
