--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -64,15 +64,17 @@ jobs:
           mkdir -Force release_package
           Copy-Item -Path build_ci\src\TextBridge.exe -Destination release_package\ -Force
 
-          # ===== 2. 最优打包命令（精简无错，适配你的版本） =====
-          # 尝试运行windeployqt，即使它失败或不完整，后续的手动复制会作为兜底
-          windeployqt release_package\TextBridge.exe --release --no-translations --compiler-runtime
-
           # 动态获取Qt根目录，避免硬编码路径错误 (提前获取变量)
           $windeployqtPath = (Get-Command windeployqt).Source
           $qtBinDir = Split-Path $windeployqtPath
           $qtRootDir = Split-Path $qtBinDir
           Write-Host "Detected Qt Root: $qtRootDir"
+          
+          # ===== 2. 最优打包命令（精简无错，适配你的版本） =====
+          # 尝试运行windeployqt，即使它失败或不完整，后续的手动复制会作为兜底
+          # 关键修改：显式指定 windeployqt 使用我们检测到的 bin 目录，避免它去错误路径查找
+          $env:Path = "$qtBinDir;$env:Path" 
+          windeployqt release_package\TextBridge.exe --release --no-translations --compiler-runtime --verbose 1
 
           # ===== 【兜底修复】手动复制核心DLL，防止windeployqt漏文件 =====
           Write-Host "Manually copying core DLLs from $qtBinDir..."
