--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -52,62 +52,52 @@ jobs:
         shell: pwsh
 
       # 优化打包步骤：PowerShell语法，增强容错性
-      - name: Package with windeployqt (Fixed All Bugs)
+      - name: Package with windeployqt
         run: |
-          # ===== 【根因1修复 核心】彻底清空Qt相关环境变量，优先级最高，杜绝干扰 =====
-          # 直接删除这两个环境变量，让windeployqt完全找不到系统Qt，必须自己复制依赖
-          Remove-Item Env:QT_PLUGIN_PATH -ErrorAction SilentlyContinue
-          Remove-Item Env:QML2_IMPORT_PATH -ErrorAction SilentlyContinue
-          Remove-Item Env:Qt5_Dir -ErrorAction SilentlyContinue
-
-          # ===== 1. 创建打包目录 + 复制编译好的exe =====
+          # 1. 准备打包目录
           mkdir -Force release_package
           Copy-Item -Path build_ci\src\TextBridge.exe -Destination release_package\ -Force
-
-          # 动态获取Qt根目录，避免硬编码路径错误 (提前获取变量)
+          
+          # 2. 动态获取Qt路径
           $windeployqtPath = (Get-Command windeployqt).Source
           $qtBinDir = Split-Path $windeployqtPath
           $qtRootDir = Split-Path $qtBinDir
           Write-Host "Detected Qt Root: $qtRootDir"
           
-          # ===== 2. 最优打包命令（精简无错，适配你的版本） =====
-          # 尝试运行windeployqt，即使它失败或不完整，后续的手动复制会作为兜底
-          # 关键修改：显式指定 windeployqt 使用我们检测到的 bin 目录，避免它去错误路径查找
-          $env:Path = "$qtBinDir;$env:Path" 
-          windeployqt release_package\TextBridge.exe --release --no-translations --compiler-runtime --verbose 1
-
-          # ===== 【兜底修复】手动复制核心DLL，防止windeployqt漏文件 =====
-          Write-Host "Manually copying core DLLs from $qtBinDir..."
-          $coreDlls = @("Qt5Core.dll", "Qt5Gui.dll", "Qt5Widgets.dll", "libgcc_s_seh-1.dll", "libstdc++-6.dll", "libwinpthread-1.dll")
-          foreach ($dll in $coreDlls) {
-              $srcPath = Join-Path $qtBinDir $dll
-              if (Test-Path $srcPath) {
-                  Copy-Item -Path $srcPath -Destination release_package\ -Force
-              } else {
-                  Write-Warning "Core DLL not found: $srcPath"
+          # 3. 运行 windeployqt
+          # 参考成功案例：直接在 exe 目录执行，或者指定 exe 路径
+          # 关键差异：成功案例中是在 exe 所在目录执行的
+          
+          Write-Host "Running windeployqt..."
+          # 将Qt bin目录添加到Path，确保能找到依赖
+          $env:Path = "$qtBinDir;$env:Path"
+          
+          # 使用 --dir 指定输出目录，直接对 exe 进行处理
+          windeployqt release_package\TextBridge.exe --dir release_package --release --no-translations --compiler-runtime --verbose 1
+          
+          # 4. 验证内容并补充（如果需要）
+          # 如果 windeployqt 成功，通常不需要手动复制核心 DLL，但保留作为保险
+          if (-not (Test-Path release_package\Qt5Core.dll)) {
+              Write-Warning "windeployqt failed to copy Qt DLLs, attempting manual copy..."
+              $coreDlls = @("Qt5Core.dll", "Qt5Gui.dll", "Qt5Widgets.dll", "libgcc_s_seh-1.dll", "libstdc++-6.dll", "libwinpthread-1.dll")
+              foreach ($dll in $coreDlls) {
+                  $srcPath = Join-Path $qtBinDir $dll
+                  if (Test-Path $srcPath) {
+                      Copy-Item -Path $srcPath -Destination release_package\ -Force
+                  }
               }
+              
+              # 手动复制 plugins
+              mkdir -Force release_package/platforms
+              Copy-Item -Path "$qtRootDir/plugins/platforms/qwindows.dll" -Destination release_package/platforms/ -Force
+              Copy-Item -Path "$qtRootDir/plugins/platforms/qminimal.dll" -Destination release_package/platforms/ -Force
           }
 
-          # ===== 【根因2修复 核心】手动复制Qt5.14.2缺失的platforms插件（必加，救命题） =====
-
-          mkdir -Force release_package/platforms
-          Copy-Item -Path "$qtRootDir/plugins/platforms/qwindows.dll" -Destination release_package/platforms/ -Force
-          Copy-Item -Path "$qtRootDir/plugins/platforms/qminimal.dll" -Destination release_package/platforms/ -Force
-
-          # ===== 3. 写入【最优稳定版】qt.conf 彻底隔离环境，防止运行时闪退 =====
-          @"
-          [Paths]
-          Prefix = .
-          Plugins = .
-          Libraries = .
-          Binaries = .
-          "@ | Out-File -FilePath release_package\qt.conf -Encoding ASCII -Force
-
-          # ===== 4. 清理冗余文件，容错处理 =====
+          # 5. 清理垃圾文件
           Remove-Item -Path release_package\*.cpp, release_package\*.h, release_package\*.obj -ErrorAction SilentlyContinue
 
-          # ===== 验证：打印打包目录结构，确认所有核心文件都在 =====
-          Write-Host "===== 打包目录文件清单 ====="
+          # 6. 打印结果
+          Write-Host "===== Package Content ====="
           Get-ChildItem -Recurse release_package
         shell: pwsh
       # 压缩打包：添加-Force覆盖已有zip
